# InteractiveYoutube

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-win.bat  docker-compose.observability.yml  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json
.github/workflows/: desktop-ci.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  TauriApp.css  TauriApp.jsx  main.jsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs  youtube_webview.rs
client/src/components/: AboutPage.css  AboutPage.jsx  AuthModal.css  AuthModal.jsx  CaptionsControl.css  CaptionsControl.jsx  ChannelBadge.css  ChannelBadge.jsx  ChannelSidebar.css  ChannelSidebar.jsx  Chat.css  Chat.jsx  ChatMessage.css  ChatMessage.jsx  ChatPicker.css  ChatPicker.jsx  DownloadPage.css  DownloadPage.jsx  ErrorBoundary.jsx  PlanningPage.css  PlanningPage.jsx  Player.css  Player.jsx  PlayerFallback.css  PlayerFallback.jsx  SignalBars.css  SignalBars.jsx  StatusPage.css  StatusPage.jsx  TauriPlayer.jsx  ViewerCount.css  ViewerCount.jsx  VolumeControl.css  VolumeControl.jsx
client/src/hooks/: useAuth.js  useChat.js  usePing.js  useSocket.js  useTvSync.js
client/src/i18n/: index.js
client/src/services/: api.js  logger.js  platform.js  socket.js
client/src/utils/: pseudoGenerator.js
desktop/: Cargo.toml
desktop/assets/remote/: index.html  remote.css  remote.js
desktop/config/: mpv.json
desktop/debian/: koala-tv.desktop
desktop/src/: app.rs  config.rs  main.rs
desktop/src/app/: background_tasks.rs  dispatch.rs  fps.rs  helpers.rs  modals.rs  render.rs  subscriptions.rs
desktop/src/i18n/: mod.rs
desktop/src/models/: channel.rs  message.rs  mod.rs  tv_state.rs
desktop/src/services/: api.rs  emoji_data.rs  frame_cache.rs  logger.rs  mod.rs  mpv_checked.rs  mpv_ipc.rs  mpv_profiles.rs  pseudo.rs  remote_server.rs  settings.rs  state_cache.rs  websocket.rs  ytdlp_updater.rs
desktop/src/theme/: colors.rs  layout.rs  mod.rs
desktop/src/views/: auth.rs  backup_player.rs  channel_badge.rs  chat.rs  emoji_input.rs  gif_picker.rs  icons.rs  loading_overlay.rs  memory_cache.rs  mod.rs  planning.rs  player.rs  player_util.rs  player_widgets.rs  popup_menu.rs  remote_modal.rs  settings_modal.rs  sidebar.rs  tooltip.rs  xft_text.rs
desktop/src/views/player/: controls.rs  lifecycle.rs  poll.rs  render.rs  x11_errors.rs
dist-staging/: INSTALL.md  koala-tv.iss
docs/: ARCHITECTURE.md  CLIENT.md  CROSS_PLATFORM.md  DESKTOP.md  OPERATIONS.md  SERVER.md
loadtest/: README.md  artillery.yml
nginx/: nginx.conf
ops/alloy/: config.alloy
ops/grafana/dashboards/: koala-logs.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/grafana/provisioning/datasources/: datasource.yml
ops/loki/: config.yml
server/: config.js  db.js  index.js  nodemon.json  nodemon.worker.json  package-lock.json  package.json  vitest.config.js
server/__tests__/: chat.test.js  playlist.test.js
server/config/: channels.json
server/cron/: refresh.js
server/data/: playlist-micode.json  playlist-popcorn.json  playlist-underscore.json  playlist-what-the-cut.json
server/i18n/: fr.js
server/middleware/: auth.js
server/models/: channel.js
server/routes/: admin.js  auth.js  gif.js  logs.js  status.js  tv.js  user.js
server/scripts/: audit-channels.js  scrape-audit.js  ytdlp-audit.sh
server/services/: deezer.js  logger.js  metrics.js  music_search.js  playlist.js  pseudo.js  pubsub.js  redis.js  rss.js  status.js  tv.js  url-resolver.js  youtube.js  ytdlp-updater.js
server/socket/: chat.js  index.js  tv.js  worker-bridge.js
server/workers/: bullmq-connection.js  daily-maintenance.js  index.js  io-emitter.js  rss-poll.js  url-resolver.js
shared/i18n/: fr.json
status-app/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
status-app/src/: StatusPage.css  StatusPage.jsx  api.js  i18n.js  index.css  main.jsx
