[package]
name = "koala-tv-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
libmpv2 = "5.0"
raw-window-handle = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
futures-util = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "cookies", "rustls-tls"], default-features = false }
rust_socketio = "0.6"
resvg = { version = "0.44", default-features = false }
tiny-skia = "0.11"
usvg = { version = "0.44", default-features = false }
png = "0.17"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }

[target."cfg(target_os = \"linux\")".dependencies]
x11-dl = "2"

[package.metadata.deb]
name = "koala-tv"
maintainer = "Louis Delez <loicdelez.ch@gmail.com>"
copyright = "2026, Louis Delez"
license-file = ["../LICENSE", "0"]
extended-description = "Koala TV desktop client: synced multi-channel YouTube TV with live chat, built on Rust + GPUI + libmpv. https://github.com/Louisdelez/KoalaTV"
section = "video"
priority = "optional"
depends = "libc6, libmpv2 | libmpv1, libx11-6, libxft2"
assets = [
  ["target/release/koala-tv-desktop", "usr/bin/koala-tv", "755"],
  ["assets/koala-tv.png", "usr/share/icons/hicolor/256x256/apps/koala-tv.png", "644"],
  ["debian/koala-tv.desktop", "usr/share/applications/koala-tv.desktop", "644"],
]
