[package]
name = "koala-tv-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
raw-window-handle = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
futures-util = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "cookies", "rustls-tls"], default-features = false }
rust_socketio = "0.6"
resvg = { version = "0.44", default-features = false }
tiny-skia = "0.11"
usvg = { version = "0.44", default-features = false }
png = "0.17"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
tracing-appender = "0.2"
# Remote control : embedded HTTP + WebSocket server for the smartphone web
# remote (see `services/remote_server.rs`). Tokio runs on a dedicated thread
# — it does NOT share with GPUI's own single-threaded async.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "signal"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
local-ip-address = "0.6"
rand = "0.8"

[target."cfg(target_os = \"linux\")".dependencies]
x11-dl = "2"

[package.metadata.deb]
name = "koala-tv"
maintainer = "Louis Delez <loicdelez.ch@gmail.com>"
copyright = "2026, Louis Delez"
license-file = ["../LICENSE", "0"]
extended-description = "Koala TV desktop client: synced multi-channel YouTube TV with live chat, built on Rust + GPUI. Spawns mpv as a subprocess (JSON IPC) for video playback — depends on the mpv binary being on PATH. https://github.com/Louisdelez/KoalaTV"
section = "video"
priority = "optional"
depends = "libc6, mpv, libx11-6, libxft2"
assets = [
  ["target/release/koala-tv-desktop", "usr/bin/koala-tv", "755"],
  ["assets/koala-tv.png", "usr/share/icons/hicolor/256x256/apps/koala-tv.png", "644"],
  ["debian/koala-tv.desktop", "usr/share/applications/koala-tv.desktop", "644"],
]
